samples/_failures_safe/1761526131_8f3ae5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_153bfc32.c: In function ‘main’:
./samples/SAFE/__tmp_153bfc32.c:153:9: error: expected declaration or statement at end of input
  153 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_153bfc32.c:153:9: error: expected declaration or statement at end of input
